--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ figcaption {
 
 
 
-/*---------------- Left Hand---------------------------------*/
+/*---------------- Bottom Nav---------------------------------*/
 
 .projectList ul {
 	padding: 0px;
@@ -311,9 +311,8 @@ figcaption {
 }
 
 
-
-.projectList li  a{
-	padding-right: 20px;
+.projectList li a {
+	padding: 20px;
 }
 
 .projectList ul li {
@@ -321,7 +320,7 @@ figcaption {
 	font-size: 1em;
 	list-style: none;
 	display: inline-block;
-	color: yellow;
+	color: white;
 	background-color: black;
 	padding: 15px;
 	margin-bottom: 15px;
