--- a/css/styles.css
+++ b/css/styles.css
@@ -311,33 +311,25 @@ figcaption {
 }
 
 .projectList li a {
-	padding: 20px;
+    padding: 20px;
 }
 
 .projectList ul li {
-	font-weight: 400;
-	font-size: 1em;
-	list-style: none;
-	display: inline-block;
-	color: white;
-	background-color: black;
-	padding: 15px;
-	margin-bottom: 15px;
-	margin-left: 20px;
-	text-align: center;
+    font-weight: 400;
+    font-size: 1em;
+    list-style: none;
+    display: inline-block;
+    padding: 15px;
+    margin-bottom: 15px;
+    margin-left: 20px;
+    text-align: center;
+    background-color: black;
 }
 
 .projectList ul li a {
-	text-decoration: none;
-	text-align: center;
-}
-
-.projectList li a:hover {
-	text-decoration: underline;
-}
-
-.projectList li a:visited {
-	color: white;
+    color: white;
+    text-decoration: none;
+    text-align: center;
 }
 
 #moreProjects { /* this is the background div */
@@ -478,27 +470,9 @@ img.typefaces {
 
 /*-----------PECI-------------*/
 
-#peciInline {
-	display: grid;
-	columns: 1fr 1fr 1fr;
+.peciInline img {
+	max-height: 50px;
 }
-
-.peciInline1 {
-	grid-column: 1;
-	grid-row: 1;
-	max-height: 1fr;
-}
-
-.peciInline2 {
-	grid-column: 2;
-	grid-row: 1;
-	max-height: 1fr;
-}
-
-.peciInline3 {
-	grid-column: 3;
-	grid-row: 1;
-	max-height: 1fr;
 }
 
 /* ------------------------ Favorites ------------------------ */
@@ -705,6 +679,29 @@ img.typefaces {
 	.projectDetail .mtColorPalette img {
 		max-width: 75%;
 	}
+
+/*-------#peciInline----------------*/ 
+{
+	display: grid;
+	columns: 1fr 1fr 1fr;
+}
+
+.peciInline1 {
+	grid-column: 1;
+	grid-row: 1;
+	max-height: 1fr;
+}
+
+.peciInline2 {
+	grid-column: 2;
+	grid-row: 1;
+	max-height: 1fr;
+}
+
+.peciInline3 {
+	grid-column: 3;
+	grid-row: 1;
+	max-height: 1fr;	
 
 	/* Resume */
 
