--- a/css/styles.css
+++ b/css/styles.css
@@ -685,25 +685,21 @@ img.typefaces {
 
 #peciInline {
 	display: grid;
-	columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .peciInline1 {
 	grid-column: 1;
-	grid-row: 1;
-	max-height: 1fr;
+
 }
 
 .peciInline2 {
 	grid-column: 2;
-	grid-row: 1;
 	max-height: 1fr;
 }
 
 .peciInline3 {
-	grid-column: 3;
-	grid-row: 1;
-	max-height: 1fr;	
+	grid-column: 3;	
 }
 
 	/* Resume */
