--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,13 @@ figure.figurePad figcaption {
 	padding: 30px 0px;
 }
 
+figure.shadow {
+    margin: 75px;
+    border-radius: 0.5em;
+    box-shadow: 0 0 20px 5px hsla(0, 0%, 0%, 0.25);
+    overflow: hidden; /*controls border corners*/
+}
+
 .banner {
 	padding: 20px 20px;
 }
@@ -185,7 +192,7 @@ figure.figurePad figcaption {
 }
 }
 
-.projectEight:hover { /*--OSHR--*/
+.projectEight:hover {
 	opacity: 0.7;
 	text-decoration: underline;
 }
@@ -216,8 +223,6 @@ figure.figurePad figcaption {
 	opacity: 0.7;
 	text-decoration: underline;
 }
-
-
 
 
 .about {
