--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ figure {
 }
 
 figcaption {
-	padding: 30px;
+	padding: 20px;
 	color: gray;
 }
 
@@ -38,15 +38,20 @@ figure.figurePad figcaption {
 	padding: 30px 0px;
 }
 
+figure.tShirt {
+	padding-top: 0px;
+}
+
 figure.shadow {
-    margin: 75px;
-    border-radius: 0.5em;
-    box-shadow: 0 0 20px 5px hsla(0, 0%, 0%, 0.25);
+    /*box-shadow: 0 0 20px 5px hsla(0, 0%, 0%, 0.25);*/
     overflow: hidden; /*controls border corners*/
+    max-width: 90%;
+	margin: 40px auto;
+	padding-top: 0px;    
 }
 
 .banner {
-	padding: 20px 20px;
+	padding: 40px 20px;
 }
 
 .banner h1 {
@@ -419,7 +424,19 @@ figure.shadow {
 }
 
 
-#peciDetail, #oshrDetail, #sonyDetail, #unfiDetail, #codeGirlDetail, #metalToadDetail, #fireflyDetail, #sonyDetail, #diagramsDetail, #holidayCardDetail {
+#peciDetail, 
+#oshrDetail, 
+#sonyDetail, 
+#unfiDetail, 
+#codeGirlDetail, 
+#metalToadDetail, 
+#fireflyDetail, 
+#sonyDetail, 
+#diagramsDetail, 
+#holidayCardDetail,
+#uxDetail,
+#letteringDetail
+ {
 	padding-top: 100px;
 	padding-bottom: 120px;
 }
@@ -445,6 +462,10 @@ figure.shadow {
 
 #metalToadDetail {
 	background-color: #f15f22;
+}
+
+#uxDetail {
+	background-color: black;
 }
 
 #unfiDetail {
@@ -489,8 +510,10 @@ figure.shadow {
 /*----------unfi---------*/
 
 img.border {
-	border: 1px solid gray;
+	border: 1px solid lightgrey;
 }
+
+
 
 /*------------Firefly Images----------*/
 
@@ -517,10 +540,18 @@ img.border {
 }
 
 img.typefaces {
-	padding: 0px;
+	padding: 100px 0px;
 }
 
+/*--------------firefly-------------*/
 
+.fireflyImages {
+	padding: 40px 0px;
+}
+
+.fireflyImage {
+	padding-top: 40px;
+}
 
 /*--------------OSHR-------------*/
 
@@ -548,7 +579,7 @@ img.full-width {
 
 /*------------UNFI-----------*/
 
-.unfiImages {
+/*.unfiImages {
 	text-align: center;
 }
 
@@ -680,6 +711,11 @@ img.full-width {
 			grid-row: 2;
 	}
 
+figure.shadow {
+	padding-top: 40px;    
+}
+
+
 /*--------------About Page ------------------*/
 	.about {
 		padding: 70px 40px 100px 40px;
@@ -745,6 +781,7 @@ img.full-width {
 
 	#moreProjects {
 		margin-left: 20px;
+		margin-right: 20px;
 	}
 
 	#moreProjects h2 {
@@ -758,8 +795,17 @@ img.full-width {
 	
 	figure.figurePad {
 		padding: 50px 40px;
+		padding-left: 40px;
 	}
 
+	figcaption {
+		padding-left: 40px;
+	}
+
+	img.oshrLogo {
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
 
 
 	/*------------MT LOGO---------------------*/
@@ -781,7 +827,7 @@ img.full-width {
 	}
 
 	img.mtColorPalette {
-		max-width: 50%;
+		max-width: 75%;
 		text-align: center;
 	}
 
@@ -789,6 +835,12 @@ img.full-width {
 figure.rejectedLogo {
 	padding-top: 150px;
 	padding-bottom: 150px;
+}
+
+/*----------------UNFI--------------------*/
+
+figure.diagramIphone {
+	padding: 60px 0px;
 }
 
 /*--------------- Resume -----------------*/
@@ -832,7 +884,20 @@ figure.rejectedLogo {
 		padding-left: 40px;
 	}
 
-}	
+figure.shadow {
+	padding-top: 60px;    
+}
+
+/*}*/	
+
+.cardImages {
+	text-align: center;
+	padding: 60px 0px;
+}
+
+img.card {
+	padding-top: 60px;
+}
 
 @media only screen and (min-width: 1300px) {
 
@@ -863,10 +928,15 @@ figure.rejectedLogo {
 
 	#moreProjects {
 		padding-left: 40px;
+		padding-right: 40px;
 	}
 
 	.figurePad {
 		padding-left: 100px;
+	}
+
+	figcaption {
+		padding-left: 80px;
 	}
 
 	/* Resume */
