--- a/css/styles.css
+++ b/css/styles.css
@@ -517,14 +517,8 @@ img.border {
 
 
 
-/*.clientLogos {
+.clientLogos {
 	text-align: center;
-	padding: 100px 0px;
-}
-
-img.clientLogo1 {
-	text-align: center;
-	margin: auto;
 }
 
 /*------------Firefly Images----------*/
