--- a/css/styles.css
+++ b/css/styles.css
@@ -130,11 +130,11 @@ figure.shadow {
 }
 
 .projectOne {
-  background-color: #e6ef00;
+  background-color: black;
 }
 
 .projectOne:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
@@ -143,43 +143,43 @@ figure.shadow {
 }
 
 .projectTwo:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectThree {
-  background-color: #F15B4A;
+  background-color: black;
 }
 
 .projectThree:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectFour {
-  background-color: #f15f22;
+  background-color: black;
 }
 
 .projectFour:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectFive {
-  background-color: #61a902;
+  background-color: black;
 }
 
 .projectFive:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectSix {
-  background-color: #54aee0;
+  background-color: black;
 }
 
 .projectSix:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
@@ -188,48 +188,48 @@ figure.shadow {
 }
 
 .projectSeven:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectEight {
-	background-color: #f15f22;
+	background-color: black;
 }
 
 .projectEight:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectNine { 
-	background-color: #193364;
+	background-color: black;
 }
 
 .projectNine:hover {
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectTen{ 
-	background-color: #f15f22;
+	background-color: black;
 }
 
 .projectTen:hover { 
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .projectEleven{ 
-	background-color: #61a902;
+	background-color: black;
 }
 
 .projectEleven:hover { 
-	opacity: 0.7;
+	opacity: 0.9;
 	text-decoration: underline;
 }
 
 .about {
-  padding: 80px 20px 80px 20px;
+  padding: 40px 20px 80px 20px;
 }
 
 .about p {
@@ -600,6 +600,20 @@ img.full-width {
 	background-color: white;
 	color: black;
 	padding-bottom: 120px;
+	padding-top: 40px;
+	margin-top: 0px;
+}
+
+.favoritesDetail h2 {
+	margin-top: 0px;
+}
+
+#favoritesDetail {
+	background-color: white;
+	color: black;
+	padding-bottom: 120px;
+	padding-top: 40px;
+	margin-top: 0px;
 }
 
 .favorites {
